--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-<!DOCTYPE html><html lang="en"><head><link rel="manifest" href="/MathJaxPlayground/manifest.json"><link rel="stylesheet" href="/MathJaxPlayground/umi.css"><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><title>MathJaxPlayground</title><link rel="icon" href="/MathJaxPlayground/favicon.ico" type="image/x-icon"><script>window.routerBase = "/MathJaxPlayground/";</script><script async src="/MathJaxPlayground/pwacompat.min.js"></script></head><body><noscript>Sorry, we need js to run correctly!</noscript><div id="root"></div><script src="/MathJaxPlayground/umi.js"></script></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
+    <title></title>
+    <link
+      rel="icon"
+      href="/MathJaxPlayground/favicon.ico"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="/umi.css" />
+    <script>
+      window.routerBase = "/";
+    </script>
+    <script>
+      //! umi version: 3.5.20
+    </script>
+  </head>
+  <body>
+    <noscript>Sorry, we need js to run correctly!</noscript>
+    <div id="root"></div>
+
+    <script src="/umi.js"></script>
+  </body>
+</html>
