--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       href="/MathJaxPlayground/favicon.ico"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/umi.css" />
+    <link rel="stylesheet" href="/MathJaxPlayground/umi.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/MathJaxPlayground/";
     </script>
     <script>
       //! umi version: 3.5.20
@@ -25,6 +25,6 @@
     <noscript>Sorry, we need js to run correctly!</noscript>
     <div id="root"></div>
 
-    <script src="/umi.js"></script>
+    <script src="/MathJaxPlayground/umi.js"></script>
   </body>
 </html>
